--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    border-radius: 30px;
 }
 
 .game-details-container{
@@ -215,21 +214,35 @@ input[type=radio]:checked ~ .option {
     text-align: center;
 }
 
-#copyright-button {
-    border-radius: 20px;
-    background-color: rgba(0,0,0,0.4);
-    border: 1px solid black;
-    color: white;
-    height: 2rem;
-}
-
 #copyright-text {
-    border-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     background-color: rgba(0,0,0,0.4);
     color: white;
     width: 40rem;
     padding: 20px;
     text-align: justify;
+}
+
+button.styled {
+    background-color: rgba(0,0,0,0.4);
+    color: #000;
+    cursor: pointer;
+    padding: 5px;
+    text-align: center;
+    border: 1px solid #000;
+}
+
+button.back {
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    width: 40rem;
+}
+
+
+button.copyright {
+    width: 40rem;
+    color: #fff;
 }
 
 @media(min-width : 300px) and (max-width : 350px){
