--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main{
     justify-content: center;
     align-items: center;
     background-color: #FFA656;
-    background: url('https://cdn.pixabay.com/photo/2020/02/16/05/59/alien-4852662_960_720.jpg');
+    background: url("/quiz/background");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
